--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "helper",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Database helper function",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run eslint -- --reset --eslintrc ./ && npm run jscs -- ./ && ./node_modules/.bin/mocha",
     "eslint": "eslint",
-    "jscs": "jscs"
+    "jscs": "jscs",
+    "sequelize": "sequelize"
   },
-  "author": "",
+  "author": "Dedito Cantila Jr.",
   "license": "ISC",
   "dependencies": {
     "async": "0.9.0",
     "inflection": "1.6.0"
   },
   "devDependencies": {
-    "eslint": "^0.23.0",
-    "jscs": "^1.12.0",
-    "mocha": "^2.2.5",
-    "should": "^7.0.2",
-    "sinon": "^1.15.4",
-    "sinet-coding-conventions": "^1.31.0"
+    "eslint": "0.23.0",
+    "jscs": "1.12.0",
+    "mocha": "2.2.5",
+    "pg": "4.4.1",
+    "pg-hstore": "2.3.2",
+    "sequelize": "3.5.1",
+    "should": "7.0.2",
+    "sinet-coding-conventions": "1.31.0",
+    "sinon": "1.15.4"
   }
 }
